Added item indicatores

--- a/src/components/carousel/carousel.module.css
+++ b/src/components/carousel/carousel.module.css
@@ -5,7 +5,7 @@
 }
 
 .blocksContainer {
-  width: 720px;
+  width: 1000px;
   height: 320px;
   background-color: red;
   
@@ -16,20 +16,20 @@
 
 .block {
   height: 100%;
-  width: 200px;
+  width: 250px;
   background-color: blue;    
   flex-shrink: 0;
   
-  margin-left: 5px;
-  margin-right: 5px;
+  padding-left: 5px;
+  padding-right: 5px;
 }
 
 .block:first-child {
-  margin-left: 0;  
+  padding-left: 0;  
 }
 
 .block:last-child {
-  margin-right: 0;  
+  padding-right: 0;  
 }
 
 .arrow {
