--- a/src/components/carousel/carousel.module.css
+++ b/src/components/carousel/carousel.module.css
@@ -8,6 +8,7 @@
   width: 1000px;
   height: 320px;
   background-color: red;
+  position: relative;
   
   overflow: hidden;
   display: flex;
@@ -15,14 +16,19 @@
 }
 
 .block {
+  position: absolute;
+  top: 0;
   height: 100%;
   width: 250px;
   background-color: blue;    
   flex-shrink: 0;
+
+  transition: 1s;
   
   padding-left: 5px;
   padding-right: 5px;
 }
+
 
 .block:first-child {
   padding-left: 0;  
