--- a/src/components/carousel/carousel.module.css
+++ b/src/components/carousel/carousel.module.css
@@ -1,7 +1,9 @@
 .carouselContainer {
  display: flex;
+ flex: 1;
  flex-direction: row;
  align-items: center;
+ justify-content:flex-start;
 }
 
 .blocksContainer {
