--- a/src/app.module.css
+++ b/src/app.module.css
@@ -3,5 +3,15 @@
   flex: 1;
   height: 100vh;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
+  flex-direction: column;
+}
+
+.credits {
+  margin-bottom: 10px;
+}
+
+.credits a{
+  color: var(--green-500);
+  text-decoration: underline;
 }
